@@ -22,7 +22,7 @@
 
 #include "osdep.h"
 
-#if defined(__MINGW32__) || defined(__CYGWIN__)
+#if defined(__MINGW32__) || defined(__CYGWIN__) || defined(__WINE__)
 #include <windows.h>
 #endif
 
